Fix icon color and alignment

--- a/src/components/splitter/_splitter.scss
+++ b/src/components/splitter/_splitter.scss
@@ -102,7 +102,8 @@
     transform: translateY(-50%);
 
     .icon {
-      width: 20px;
+      color: currentColor;
+      width: 19px;
     }
   }
 
@@ -133,7 +134,7 @@
       left: 50%;
       margin-left: -10px;
       position: absolute;
-      top: 2px;
+      top: 1px;
     }
   }
 
